section advantages, bg of section consultation, add scss files in folder blcks (heading, span)

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -18,6 +18,8 @@
 
 @import 'blocks/promo';
 @import 'blocks/header';
+@import 'blocks/advantages';
+@import 'blocks/consultation';
 @import 'blocks/buttons';
 @import 'blocks/heading';
 @import 'blocks/span';
