--- a/src/sass/blocks/_heading.scss
+++ b/src/sass/blocks/_heading.scss
@@ -6,4 +6,17 @@
     &-two {
         font-size: 25px;
     }
+    &-advantagesh3 {
+        margin-top: 43px;
+        font-size: 19px;
+        font-weight: 700;
+        color: #000;
+    }
+    &-advantagesh2 {
+        font-size: 30px;
+        font-weight: 700;
+        color: #000;
+        text-align: center;
+        text-transform: uppercase;
+    }
 }
