fixed bootstrap-rebot, add scripts, create section carousel, +-15% ofcatalog, fixed blocks forms, add blocks for heading

--- a/src/sass/blocks/_heading.scss
+++ b/src/sass/blocks/_heading.scss
@@ -19,4 +19,9 @@
         text-align: center;
         text-transform: uppercase;
     }
+    &-consultation {
+        font-size: 48px;
+        font-weight: 700;
+        color: #fff;
+    }
 }
