--- a/src/sass/blocks/_buttons.scss
+++ b/src/sass/blocks/_buttons.scss
@@ -12,4 +12,9 @@
         width: 300px;
         height: 50px;
     }
+    &-consultation {
+        width: 303px;
+        height: 58px;
+        background-color: #C70101;
+    }
 }
