--- a/src/sass/blocks/_consultation.scss
+++ b/src/sass/blocks/_consultation.scss
@@ -1,5 +1,5 @@
 .consultation {
-    padding: 15px 0 0 15px;
+    padding: 100px 0 0 0;
     min-height: 600px;
     background: url(../img/consultattion.png) center (center / cover) no-repeat;
 }
